# secureagent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  eslint.config.js  install.sh  package-lock.json  package.json  pnpm-lock.yaml  secureagent  start.sh  test-endpoints.sh  test-report.md  tsconfig.json  vercel.json  vitest.config.ts
.github/workflows/: ci.yml
api/: agent.ts  browser.ts  chat.ts  discord.ts  elevenlabs.ts  enterprise.ts  google-chat.ts  heartbeat.ts  index.ts  skill.ts  slack.ts  teams.ts  telegram-tasks.ts  telegram.ts  whatsapp.ts
api/lib/: client-store.ts  supabase.ts  telegram-store.ts
apps/: README.md
apps/android/: README.md  index.js  metro.config.js  package.json
apps/ios/: README.md  app.json  index.js  package.json  (+1 more)
chrome-extension/: README.md  manifest.json
docs/: PRICING_ANALYSIS.md  api-reference.md  faq.md  features.md  getting-started.md  integrations.md  telegram-commands.md
landing/: .env.example  package-lock.json  package.json
scripts/: discord-bot.ts  secureagent.service  setup-local.sh
secureagent-desktop/: .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
secureagent-desktop/src-tauri/: Cargo.toml  tauri.conf.json
secureagent-desktop/src-tauri/migrations/: 001_init.sql
secureagent-desktop/src-tauri/src/: lib.rs  main.rs  tray.rs
secureagent-desktop/src-tauri/src/commands/: chat.rs  mod.rs  ollama.rs  settings.rs  storage.rs
secureagent-desktop/src-tauri/src/services/: database.rs  mod.rs  ollama.rs
src/: bot.ts  index.ts
tests/: setup.ts
(+935 files in other folders)
