[package]
name = "secureagent-desktop"
version = "1.0.0"
description = "SecureAgent Desktop - Offline AI assistant with local models"
authors = ["SecureAgent"]
license = "MIT"
repository = ""
edition = "2021"
default-run = "secureagent-desktop"

[lib]
name = "secureagent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "secureagent-desktop"
path = "src/main.rs"

[[bin]]
name = "secureagent"
path = "src/bin/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
thiserror = "1"
once_cell = "1"
futures-util = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
